Update CG option.